srcs/tester/base/queue/empty/log.txt
./base/queue/empty/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::queue<int> myqueue;
 ^
./base/queue/empty/patched.cpp:10:26: error: use of undeclared identifier 'myqueue'
 for (int i=1;i<=10;i++) myqueue.push(i);
                         ^
./base/queue/empty/patched.cpp:12:10: error: use of undeclared identifier 'myqueue'
 while (!myqueue.empty())
         ^
./base/queue/empty/patched.cpp:14:9: error: use of undeclared identifier 'myqueue'
 sum += myqueue.front();
        ^
./base/queue/empty/patched.cpp:15:2: error: use of undeclared identifier 'myqueue'
 myqueue.pop();
 ^
5 errors generated.
